PROJECT(lighttpd C)

INCLUDE(CTest)

ENABLE_TESTING()

SET(CPACK_PACKAGE_VERSION_MAJOR 1)
SET(CPACK_PACKAGE_VERSION_MINOR 5)
SET(CPACK_PACKAGE_VERSION_PATCH 0)

SET(CPACK_GENERATOR "TGZ")
SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_SOURCE_IGNORE_FILES "/\\\\.;~$;/_;build/;CMakeFiles/;gz$")

SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")

ADD_SUBDIRECTORY(src build)
ADD_SUBDIRECTORY(doc)
ADD_SUBDIRECTORY(tests)


